# company_scripts

./: .gitignore  email_utils.py  file_utils.py  google_client.py  main.py  project_config.py  pyproject.toml  test.py
